# connect-extension-runner

./: .gitignore  Dockerfile  README.md  banner  banner_ui  copy.tpl  entrypoint.sh  extension-check-static  extension-devel  extension-test  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yml  deploy.yml
connect/eaas/: __init__.py  config.py  constants.py  dataclasses.py  exceptions.py  extension.py  handler.py  helpers.py  logging.py  main.py  manager.py  worker.py  workers.py
connect/eaas/extension_runner/: config.py  constants.py  exceptions.py  handler.py  helpers.py  main.py  worker.py
connect/eaas/extension_runner/managers/: __init__.py  background.py  base.py  interactive.py  scheduled.py
connect/eaas/managers/: __init__.py  background.py  base.py  interactive.py  scheduled.py
connect/eaas/runner/: __init__.py  asgi.py  config.py  constants.py  exceptions.py  handler.py  helpers.py  logging.py  main.py  master.py  webapp.py  webworker.py  worker.py
connect/eaas/runner/artworks/: banner.py
connect/eaas/runner/handlers/: anvil.py  anvilapp.py  base.py  events.py  transformations.py  web.py  webapp.py
connect/eaas/runner/managers/: __init__.py  background.py  base.py  interactive.py  scheduled.py  transformation.py  utils.py
connect/eaas/runner/workers/: anvil.py  anvilapp.py  base.py  events.py  transformations.py  web.py  webapp.py
tests/: __init__.py  conftest.py  test_asgi.py  test_config.py  test_dataclasses.py  test_extension.py  test_handler.py  test_helpers.py  test_logging.py  test_main.py  test_manager.py  test_master.py  test_webapp.py  test_webworker.py  test_worker.py  test_workers.py  utils.py
tests/handlers/: test_anvil.py  test_anvilapp.py  test_base.py  test_events.py  test_transformations.py  test_web.py  test_webapp.py
tests/managers/: test_background.py  test_base.py  test_interactive.py  test_scheduled.py  test_transformation.py
tests/test_data/: input_file_example.xlsx
tests/workers/: test_anvil.py  test_anvilapp.py  test_events.py  test_transformations.py  test_web.py  test_webapp.py
