[tool.poetry]
name = "connect-extension-runner"
version = "0.0.0"
description = "CloudBlue Connect EaaS Extension Runner"
authors = ["CloudBlue LLC"]
license = "Apache-2.0"
packages = [
    { include = "connect" },
]
readme = "./README.md"
homepage = "https://connect.cloudblue.com"
repository = "https://github.com/cloudblue/connect-extension-runner"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.scripts]
cextrun = 'connect.eaas.runner.main:main'

[tool.poetry.dependencies]
python = ">=3.8,<4"
websockets = "10.*"
connect-openapi-client = ">=25.16"
logzio-python-handler = "^3.1.1"
backoff = "^2.2.1"
connect-eaas-core = ">=28.9,<29"
httpx = ">=0.23,<0.25"
rich = ">=12"
pyfiglet = "^0.8.post1"
devtools = "^0.10.0"
watchfiles = "^0.19.0"
openpyxl = ">=3.0.0,<4"
lxml = "^4.9.2"
uvloop = "^0.17.0"
urllib3 = "<2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.3.1"
pytest-randomly = "^3.12.0"
coverage = {extras = ["toml"], version = "^5.3"}
flake8 = "^5"
flake8-bugbear = "^22"
flake8-cognitive-complexity = "^0.1"
flake8-commas = "^2.1.0"
flake8-future-import = "~0.4"
flake8-broken-line = "^0.6"
flake8-pyproject = "^1.2.2"
pytest-asyncio = "0.20.*"
pytest-httpx = ">=0.20"
responses = "^0.23.0"
freezegun = "^1.2.1"
flaky = "^3.7.0"
flake8-isort = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [
    ".idea",
    ".vscode",
    ".git",
    "pg_data",
    "venv",
    "*/settings/*.py",
    "*/migrations/*.py"
]
show-source = true
max-line-length = 100
max-cognitive-complexity = 20
ignore = ["FI1", "I100", "W503"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = [
    "connect/eaas/runner/constants.py",
    "connect/eaas/dataclasses.py",
    "connect/eaas/extension.py"
]
exclude_lines = [
    "raise NotImplementedError",
    "pragma: no cover",
    "pragma: no branch"
]


[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = false
addopts = "-v --cov=connect.eaas.runner --cov-report=term-missing:skip-covered --cov-report=html --cov-report=xml"
python_files = "test_*.py"
junit_family = "xunit2"
asyncio_mode = "strict"

[tool.isort]
src_paths = "*"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["connect"]
group_by_package = true
multi_line_output = 3
force_grid_wrap = 1
combine_as_imports = true
use_parentheses = true
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
